Closed Bug 1658194 Opened 5 years ago Closed 5 years ago

Perma gecko/widget/gtk/DMABufLibWrapper.cpp:196:22: error: out-of-line definition of 'IsDMABufBasicEnabled' does not match any declaration in 'mozilla::widget::nsDMABufDevice'; did you mean 'IsDMABufWebGLEnabled'? when Gecko 81 merges to Beta on 2020-08-2

Categories

(Core :: Widget: Gtk, defect, P3)

Firefox 81
defect

Tracking

()

VERIFIED FIXED
81 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox79 --- unaffected
firefox80 --- unaffected
firefox81 + verified

People

(Reporter: malexandru, Assigned: stransky)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Central as Early Beta Simulation:
https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Crunnable&revision=93b56b9c0df81649c860f14fc0049e68f7015825&selectedTaskRun=HpRA8k5rRD2R5cwAf6_mtA.0

Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=312513438&repo=try&lineNumber=40243

Raw log: https://firefoxci.taskcluster-artifacts.net/HpRA8k5rRD2R5cwAf6_mtA/0/public/logs/live_backing.log

[task 2020-08-09T10:33:05.712Z] 10:33:05  WARNING -  /builds/worker/checkouts/gecko/media/ffvpx/config_unix64.h:235:9: warning: 'HAVE_VALGRIND_VALGRIND_H' macro redefined [-Wmacro-redefined]
[task 2020-08-09T10:33:05.712Z] 10:33:05     INFO -  #define HAVE_VALGRIND_VALGRIND_H 0
[task 2020-08-09T10:33:05.712Z] 10:33:05     INFO -          ^
[task 2020-08-09T10:33:05.712Z] 10:33:05     INFO -  /builds/worker/workspace/obj-build/mozilla-config.h:88:9: note: previous definition is here
[task 2020-08-09T10:33:05.712Z] 10:33:05     INFO -  #define HAVE_VALGRIND_VALGRIND_H 1
[task 2020-08-09T10:33:05.712Z] 10:33:05     INFO -          ^
[task 2020-08-09T10:33:05.712Z] 10:33:05     INFO -  2 warnings generated.
[task 2020-08-09T10:33:05.712Z] 10:33:05     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/media/ffvpx/libavutil'
[task 2020-08-09T10:33:05.767Z] 10:33:05     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/widget/gtk'
[task 2020-08-09T10:33:05.767Z] 10:33:05     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ -std=gnu++17 -o Unified_cpp_widget_gtk0.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -fno-common -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DCAIRO_GFX '-DMOZ_APP_NAME="firefox"' -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/widget/gtk -I/builds/worker/workspace/obj-build/widget/gtk -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/ipc/glue -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/checkouts/gecko/layout/forms -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/other-licenses/atk-1.0 -I/builds/worker/checkouts/gecko/third_party/cups/include -I/builds/worker/checkouts/gecko/widget -I/builds/worker/checkouts/gecko/widget/headless -I/builds/worker/checkouts/gecko/widget/x11 -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fsanitize=bool,bounds,enum,integer-divide-by-zero,object-size,pointer-overflow,return,vla-bound -fno-sanitize-recover=bool,bounds,enum,integer-divide-by-zero,object-size,pointer-overflow,return,vla-bound -fsanitize-blacklist=/builds/worker/workspace/obj-build/ubsan_blacklist.txt -fsanitize=address -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -gline-tables-only -fno-omit-frame-pointer -funwind-tables -Werror -I/builds/worker/checkouts/gecko/widget/gtk/compat-gtk3 -pthread -I/usr/include/gtk-3.0/unix-print -I/usr/include/gtk-3.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/at-spi-2.0 -I/usr/include/dbus-1.0 -I/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/usr/include/gtk-3.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/harfbuzz -I/usr/include/pango-1.0 -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng12 -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/libpng12 -I/usr/include/gio-unix-2.0/ -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -pthread -I/usr/include/gtk-3.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/at-spi-2.0 -I/usr/include/dbus-1.0 -I/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/usr/include/gtk-3.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/harfbuzz -I/usr/include/pango-1.0 -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng12 -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/libpng12 -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/libdrm -I/usr/include/dbus-1.0 -I/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -Wno-error=shadow -fexperimental-new-pass-manager  -MD -MP -MF .deps/Unified_cpp_widget_gtk0.o.pp   Unified_cpp_widget_gtk0.cpp
[task 2020-08-09T10:33:05.767Z] 10:33:05     INFO -  In file included from Unified_cpp_widget_gtk0.cpp:20:
[task 2020-08-09T10:33:05.767Z] 10:33:05    ERROR -  /builds/worker/checkouts/gecko/widget/gtk/DMABufLibWrapper.cpp:196:22: error: out-of-line definition of 'IsDMABufBasicEnabled' does not match any declaration in 'mozilla::widget::nsDMABufDevice'; did you mean 'IsDMABufWebGLEnabled'?
[task 2020-08-09T10:33:05.767Z] 10:33:05     INFO -  bool nsDMABufDevice::IsDMABufBasicEnabled() { return false; }
[task 2020-08-09T10:33:05.767Z] 10:33:05     INFO -                       ^~~~~~~~~~~~~~~~~~~~
[task 2020-08-09T10:33:05.767Z] 10:33:05     INFO -                       IsDMABufWebGLEnabled
[task 2020-08-09T10:33:05.767Z] 10:33:05     INFO -  /builds/worker/checkouts/gecko/widget/gtk/DMABufLibWrapper.h:139:8: note: 'IsDMABufWebGLEnabled' declared here
[task 2020-08-09T10:33:05.767Z] 10:33:05     INFO -    bool IsDMABufWebGLEnabled();
[task 2020-08-09T10:33:05.767Z] 10:33:05     INFO -         ^
[task 2020-08-09T10:33:05.767Z] 10:33:05     INFO -  1 error generated.
[task 2020-08-09T10:33:05.767Z] 10:33:05     INFO -  /builds/worker/checkouts/gecko/config/rules.mk:718: recipe for target 'Unified_cpp_widget_gtk0.o' failed
[task 2020-08-09T10:33:05.767Z] 10:33:05    ERROR -  make[4]: *** [Unified_cpp_widget_gtk0.o] Error 1
[task 2020-08-09T10:33:05.767Z] 10:33:05     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/widget/gtk'
[task 2020-08-09T10:33:05.767Z] 10:33:05     INFO -  make[4]: *** Waiting for unfinished jobs....
[task 2020-08-09T10:33:05.835Z] 10:33:05     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/media/ffvpx/libavcodec'
[task 2020-08-09T10:33:05.835Z] 10:33:05     INFO -  media/ffvpx/libavcodec/dct.o
[task 2020-08-09T10:33:05.835Z] 10:33:05     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang -std=gnu99 -o dct.o -c  -U_FORTIFY_SOURCE -fno-common -DNDEBUG=1 -DTRIMMED=1 -DHAVE_AV_CONFIG_H -I/builds/worker/checkouts/gecko/media/ffvpx/libavcodec -I/builds/worker/workspace/obj-build/media/ffvpx/libavcodec -I/builds/worker/checkouts/gecko/media/ffvpx -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -fPIC -include /builds/worker/workspace/obj-build/mozilla-config.h -DMOZILLA_CLIENT -Qunused-arguments -fsanitize=bool,bounds,enum,integer-divide-by-zero,object-size,pointer-overflow,return,vla-bound -fno-sanitize-recover=bool,bounds,enum,integer-divide-by-zero,object-size,pointer-overflow,return,vla-bound -fsanitize-blacklist=/builds/worker/workspace/obj-build/ubsan_blacklist.txt -fsanitize=address -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-strict-aliasing -ffunction-sections -fdata-sections -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -gline-tables-only -fno-omit-frame-pointer -funwind-tables -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-parentheses -Wno-pointer-sign -Wno-sign-compare -Wno-switch -Wno-type-limits -Wno-unused-function -Wno-deprecated-declarations -Wno-absolute-value -Wno-incompatible-pointer-types -Wno-string-conversion -Wno-visibility -ffreestanding -include libavutil_visibility.h -fexperimental-new-pass-manager  -MD -MP -MF .deps/dct.o.pp   /builds/worker/checkouts/gecko/media/ffvpx/libavcodec/dct.c
[task 2020-08-09T10:33:05.835Z] 10:33:05     INFO -  In file included from <built-in>:2:
[task 2020-08-09T10:33:05.835Z] 10:33:05     INFO -  In file included from /builds/worker/checkouts/gecko/media/ffvpx/libavutil_visibility.h:26:
[task 2020-08-09T10:33:05.835Z] 10:33:05     INFO -  In file included from /builds/worker/checkouts/gecko/media/ffvpx/libavutil/log.h:25:
[task 2020-08-09T10:33:05.835Z] 10:33:05     INFO -  In file included from /builds/worker/checkouts/gecko/media/ffvpx/libavutil/avutil.h:296:
[task 2020-08-09T10:33:05.835Z] 10:33:05     INFO -  In file included from /builds/worker/checkouts/gecko/media/ffvpx/libavutil/common.h:105:
[task 2020-08-09T10:33:05.835Z] 10:33:05     INFO -  In file included from /builds/worker/checkouts/gecko/media/ffvpx/config.h:45:
[task 2020-08-09T10:33:05.835Z] 10:33:05  WARNING -  /builds/worker/checkouts/gecko/media/ffvpx/config_unix64.h:219:9: warning: 'HAVE_LINUX_PERF_EVENT_H' macro redefined [-Wmacro-redefined]
[task 2020-08-09T10:33:05.836Z] 10:33:05     INFO -  #define HAVE_LINUX_PERF_EVENT_H 0
[task 2020-08-09T10:33:05.836Z] 10:33:05     INFO -          ^
[task 2020-08-09T10:33:05.836Z] 10:33:05     INFO -  /builds/worker/workspace/obj-build/mozilla-config.h:58:9: note: previous definition is here
[task 2020-08-09T10:33:05.836Z] 10:33:05     INFO -  #define HAVE_LINUX_PERF_EVENT_H 1
[task 2020-08-09T10:33:05.836Z] 10:33:05     INFO -          ^
[task 2020-08-09T10:33:05.836Z] 10:33:05     INFO -  In file included from <built-in>:2:
[task 2020-08-09T10:33:05.836Z] 10:33:05     INFO -  In file included from /builds/worker/checkouts/gecko/media/ffvpx/libavutil_visibility.h:26:
[task 2020-08-09T10:33:05.836Z] 10:33:05     INFO -  In file included from /builds/worker/checkouts/gecko/media/ffvpx/libavutil/log.h:25:
[task 2020-08-09T10:33:05.836Z] 10:33:05     INFO -  In file included from /builds/worker/checkouts/gecko/media/ffvpx/libavutil/avutil.h:296:
[task 2020-08-09T10:33:05.836Z] 10:33:05     INFO -  In file included from /builds/worker/checkouts/gecko/media/ffvpx/libavutil/common.h:105:
[task 2020-08-09T10:33:05.836Z] 10:33:05     INFO -  In file included from /builds/worker/checkouts/gecko/media/ffvpx/config.h:45:
[task 2020-08-09T10:33:05.836Z] 10:33:05  WARNING -  /builds/worker/checkouts/gecko/media/ffvpx/config_unix64.h:235:9: warning: 'HAVE_VALGRIND_VALGRIND_H' macro redefined [-Wmacro-redefined]
<...>
[task 2020-08-09T10:34:05.581Z] 10:34:05  WARNING -  /builds/worker/checkouts/gecko/media/ffvpx/config_unix64.h:235:9: warning: 'HAVE_VALGRIND_VALGRIND_H' macro redefined [-Wmacro-redefined]
[task 2020-08-09T10:34:05.581Z] 10:34:05     INFO -  #define HAVE_VALGRIND_VALGRIND_H 0
[task 2020-08-09T10:34:05.581Z] 10:34:05     INFO -          ^
[task 2020-08-09T10:34:05.581Z] 10:34:05     INFO -  /builds/worker/workspace/obj-build/mozilla-config.h:88:9: note: previous definition is here
[task 2020-08-09T10:34:05.582Z] 10:34:05     INFO -  #define HAVE_VALGRIND_VALGRIND_H 1
[task 2020-08-09T10:34:05.582Z] 10:34:05     INFO -          ^
[task 2020-08-09T10:34:05.582Z] 10:34:05     INFO -  2 warnings generated.
[task 2020-08-09T10:34:05.582Z] 10:34:05     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/media/ffvpx/libavcodec'
[task 2020-08-09T10:34:06.205Z] 10:34:06     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/media/ffvpx/libavcodec/x86'
[task 2020-08-09T10:34:06.205Z] 10:34:06     INFO -  media/ffvpx/libavcodec/x86/vp9itxfm.o
[task 2020-08-09T10:34:06.205Z] 10:34:06     INFO -  /usr/bin/yasm -o vp9itxfm.o -f elf64 -rnasm -pnasm -g dwarf2 -D__x86_64__ -DPIC -DELF -Pconfig_unix64.asm -Pdefaults_disabled.asm -I/builds/worker/checkouts/gecko/media/ffvpx/ -I/builds/worker/checkouts/gecko/media/ffvpx/libavcodec/x86/ -I/builds/worker/checkouts/gecko/media/ffvpx/libavutil/x86/   /builds/worker/checkouts/gecko/media/ffvpx/libavcodec/x86/vp9itxfm.asm
[task 2020-08-09T10:34:06.206Z] 10:34:06     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/media/ffvpx/libavcodec/x86'
[task 2020-08-09T10:34:11.848Z] 10:34:11     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/media/webrtc/signaling/gtest'
[task 2020-08-09T10:34:11.851Z] 10:34:11     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ -std=gnu++17 -o sdp_unittests.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -fno-common -DNDEBUG=1 -DTRIMMED=1 -DHAVE_UINT64_T -DWEBRTC_POSIX -DWEBRTC_BUILD_LIBEVENT -DWEBRTC_LINUX -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/media/webrtc/signaling/gtest -I/builds/worker/workspace/obj-build/media/webrtc/signaling/gtest -I/builds/worker/checkouts/gecko/dom/media -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/media/mtransport -I/builds/worker/checkouts/gecko/media/mtransport/test -I/builds/worker/checkouts/gecko/media/mtransport/third_party/nrappkit/src/registry -I/builds/worker/checkouts/gecko/media/webrtc -I/builds/worker/checkouts/gecko/media/webrtc/signaling/src/common -I/builds/worker/checkouts/gecko/media/webrtc/signaling/src/common/time_profiling -I/builds/worker/checkouts/gecko/media/webrtc/signaling/src/media-conduit -I/builds/worker/checkouts/gecko/media/webrtc/signaling/src/mediapipeline -I/builds/worker/checkouts/gecko/media/webrtc/signaling/src/peerconnection -I/builds/worker/checkouts/gecko/media/webrtc/trunk -I/builds/worker/checkouts/gecko/media/webrtc/trunk/webrtc -I/builds/worker/checkouts/gecko/netwerk/srtp/src/include -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fsanitize=bool,bounds,enum,integer-divide-by-zero,object-size,pointer-overflow,return,vla-bound -fno-sanitize-recover=bool,bounds,enum,integer-divide-by-zero,object-size,pointer-overflow,return,vla-bound -fsanitize-blacklist=/builds/worker/workspace/obj-build/ubsan_blacklist.txt -fsanitize=address -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -gline-tables-only -fno-omit-frame-pointer -funwind-tables -Werror -Wno-error=shadow -fexperimental-new-pass-manager  -MD -MP -MF .deps/sdp_unittests.o.pp   /builds/worker/checkouts/gecko/media/webrtc/signaling/gtest/sdp_unittests.cpp
[task 2020-08-09T10:34:11.852Z] 10:34:11     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/media/webrtc/signaling/gtest'
[task 2020-08-09T10:34:11.852Z] 10:34:11     INFO -  /builds/worker/checkouts/gecko/config/recurse.mk:32: recipe for target 'compile' failed
[task 2020-08-09T10:34:11.852Z] 10:34:11    ERROR -  make[2]: *** [compile] Error 2
[task 2020-08-09T10:34:11.852Z] 10:34:11     INFO -  /builds/worker/checkouts/gecko/config/rules.mk:384: recipe for target 'default' failed
[task 2020-08-09T10:34:11.852Z] 10:34:11    ERROR -  make[1]: *** [default] Error 2
[task 2020-08-09T10:34:11.852Z] 10:34:11     INFO -  client.mk:125: recipe for target 'build' failed
[task 2020-08-09T10:34:11.852Z] 10:34:11     INFO -  make: *** [build] Error 2
[task 2020-08-09T10:34:11.870Z] 10:34:11     INFO -  278 compiler warnings present.
[task 2020-08-09T10:34:11.992Z] 10:34:11     INFO -  Notification center failed: Install notify-send (usually part of the libnotify package) to get a notification when the build finishes.
[task 2020-08-09T10:34:12.053Z] 10:34:12    ERROR - Return code: 2
[task 2020-08-09T10:34:12.053Z] 10:34:12  WARNING - setting return code to 2
[task 2020-08-09T10:34:12.053Z] 10:34:12    FATAL - 'mach build -v' did not run successfully. Please check log for errors.
[task 2020-08-09T10:34:12.053Z] 10:34:12    FATAL - Running post_fatal callback...
[task 2020-08-09T10:34:12.053Z] 10:34:12    FATAL - Exiting -1
[task 2020-08-09T10:34:12.053Z] 10:34:12     INFO - [mozharness: 2020-08-09 10:34:12.053394Z] Finished build step (failed)
[task 2020-08-09T10:34:12.053Z] 10:34:12     INFO - Running post-run listener: _parse_build_tests_ccov
[task 2020-08-09T10:34:12.053Z] 10:34:12     INFO - Running command: ['/builds/worker/checkouts/gecko/obj-x86_64-pc-linux-gnu/_virtualenvs/init_py3/bin/python', 'mach', 'python', 'testing/parse_build_tests_ccov.py'] in /builds/worker/checkouts/gecko
[task 2020-08-09T10:34:12.053Z] 10:34:12     INFO - Copy/paste: /builds/worker/checkouts/gecko/obj-x86_64-pc-linux-gnu/_virtualenvs/init_py3/bin/python mach python testing/parse_build_tests_ccov.py
[task 2020-08-09T10:34:12.054Z] 10:34:12     INFO - Using env: {'ACCEPTED_MAR_CHANNEL_IDS': 'firefox-mozilla-beta,firefox-mozilla-release',
[task 2020-08-09T10:34:12.054Z] 10:34:12     INFO -  'ASAN_OPTIONS': 'detect_leaks=0',
[task 2020-08-09T10:34:12.054Z] 10:34:12     INFO -  'DEBIAN_FRONTEND': 'noninteractive',
[task 2020-08-09T10:34:12.054Z] 10:34:12     INFO -  'DISPLAY': ':2',
[task 2020-08-09T10:34:12.054Z] 10:34:12     INFO -  'EXTRA_MOZHARNESS_CONFIG': '{"mozconfig_variant": "nightly-asan", "objdir": '
[task 2020-08-09T10:34:12.055Z] 10:34:12     INFO -                             '"obj-build", "update_channel": "beta"}',
[task 2020-08-09T10:34:12.055Z] 10:34:12     INFO -  'GECKO_BASE_REPOSITORY': 'https://hg.mozilla.org/mozilla-unified',
[task 2020-08-09T10:34:12.055Z] 10:34:12     INFO -  'GECKO_HEAD_REPOSITORY': 'https://hg.mozilla.org/try',
[task 2020-08-09T10:34:12.055Z] 10:34:12     INFO -  'GECKO_HEAD_REV': '93b56b9c0df81649c860f14fc0049e68f7015825',
[task 2020-08-09T10:34:12.055Z] 10:34:12     INFO -  'GECKO_PATH': '/builds/worker/checkouts/gecko',
[task 2020-08-09T10:34:12.055Z] 10:34:12     INFO -  'GRCOV_PATH': '/builds/worker/fetches/grcov',
[task 2020-08-09T10:34:12.055Z] 10:34:12     INFO -  'HG_SHARE_BASE_DIR': '/builds/hg-shared',
[task 2020-08-09T10:34:12.055Z] 10:34:12     INFO -  'HG_STORE_PATH': '/builds/worker/checkouts/hg-store',
[task 2020-08-09T10:34:12.055Z] 10:34:12     INFO -  'HOME': '/builds/worker',
[task 2020-08-09T10:34:12.055Z] 10:34:12     INFO -  'HOSTNAME': 'taskcluster-worker',

Martin, this looks to be caused by the changes in Bug 1657747, could you please take a look?

Flags: needinfo?(stransky)

Sure, I'll fix that.

Flags: needinfo?(stransky)
Assignee: nobody → stransky
Priority: -- → P3
Pushed by abutkovits@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ca4a9ddeb540 [Wayland] Remove nsDMABufDevice::IsDMABufBasicEnabled() as it's unused, r=jhorak
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: