Bug 1658194 [Wayland] Remove nsDMABufDevice::IsDMABufBasicEnabled() as it's unused, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D86518